--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head><title>Pradnya Mhatre</title></head>
 <body>
-<h1>Pradnya's test CI/CD launched successfully !!!</h1>
+<h1>Pradnya's demo CI/CD launched successfully !!!</h1>
 </body>
 </html>
