--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
-<head><title>Pradnya Mhatre</title></head>
-<body>
-<h1>Pradnya's demo CI/CD launched successfully !!!</h1>
-</body>
+    <head>
+        <title>Pradnya Mhatre</title>
+    </head>
+    <body>
+        <h1>New Changes reflecting</h1>
+        <i>This is the IP : http://16.170.228.130/ </i>
+        <b>Following codebase is the old one<b>
+        <h1>Pradnya's demo CI/CD launched successfully !!!</h1>
+    </body>
 </html>
