--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <title>Pradnya Mhatre</title>
     </head>
     <body>
+        <h1>New Changes reflecting</h1>
+        <br><br>
         <h1>Pradnya's demo CI/CD launched successfully !!!</h1>
     </body>
 </html>
