--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <body>
         <h1>New Changes reflecting</h1>
         <br><br>
-        <h1>Pradnya's demo CI/CD launched successfully !!!</h1>
+        <h1>Pradnya's demo CI/CD with Docker container launched successfully !!!</h1>
     </body>
 </html>
